deployment/backend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: backend
        image: "mbellgb/ucl-assistant-server:v0.4.3"
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: http
          containerPort: 3000
    metadata:
      labels:
        app: ucl-assistant
        tier: backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: ucl-assistant
    tier: backend
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: NodePort
  ports:
  - port: 8080
    targetPort: http
  selector:
    app: ucl-assistant
    tier: backend
