deployment/db.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db
  labels:
    app: ucl-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ucl-assistant
      tier: db
  template:
    metadata:
      labels:
        app: ucl-assistant
        tier: db
    spec:
      containers:
        - image: postgres:10
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /var/lib/postgres
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: db-volumeclaim
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: ucl-assistant
    tier: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: postgres
  selector:
    app: ucl-assistant
    tier: db
