deployment/notifications.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: notifications
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: notifications
        image: "mbellgb/ucl-assistant-notifications:v0.1.0"
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: http
          containerPort: 3000
    metadata:
      labels:
        app: ucl-assistant
        tier: notifications
---
apiVersion: v1
kind: Service
metadata:
  name: notifications
  labels:
    app: ucl-assistant
    tier: notifications
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: NodePort
  ports:
  - port: 8080
    targetPort: http
  selector:
    app: ucl-assistant
    tier: notifications
