deployment/redis-worker.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-worker
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
        role: worker
        tier: backend
    spec:
      containers:
      - name: worker
        image: gcr.io/google_samples/gb-redisworker:v1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-worker
  labels:
    app: redis
    role: worker
    tier: backend
spec:
  ports:
  - port: 6379
  selector:
    app: redis
    role: worker
    tier: backend
