deployment/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "false"
  name: redis-cluster
  labels:
    app: ucl-assistant
    tier: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
    name: client
  - port: 16379
    targetPort: 16379
    name: gossip
  clusterIP: None
  selector:
    app: ucl-assistant
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cluster
  labels:
    app: ucl-assistant
    tier: redis
spec:
  serviceName: redis-cluster
  selector:
    matchLabels:
      app: ucl-assistant
      tier: redis
  replicas: 6
  template:
    metadata:
      labels:
        app: ucl-assistant
        tier: redis
    spec:
      containers:
      - name: redis-cluster
        image: mbellgb/ucl-assistant-redis:v1
        ports:
        - containerPort: 6379
          name: client
        - containerPort: 16379
          name: gossip
        command: [ "redis-server" ]
        args: [ "/conf/redis.conf" ]
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "redis-cli -h $(hostname) ping"
          initialDelaySeconds: 15
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "redis-cli -h $(hostname) ping"
          initialDelaySeconds: 20
          periodSeconds: 3
        volumeMounts:
        - name: conf
          mountPath: /conf
          readOnly: false
        - name: data
          mountPath: /data
          readOnly: false
      volumes:
      - name: conf
        configMap:
          name: redis-cluster
          items: 
          - key: redis.conf
            path: redis.conf
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        name: redis-cluster
      annotations:
        volume.alpha.kubernetes.io/storage-class: anything
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi
