deployment/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ucl-assistant-web
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ucl-assistant
  labels:
    app: ucl-assistant
spec:
  backend:
    serviceName: backend
    servicePort: 8080
  tls:
  - secretName: ucl-assistant-tls
    hosts:
    - api.assistant.mbell.me
